# rrim

./: pyproject.toml
.github/workflows/: pytest.yml
scraper/: pyproject.toml
server/: pyproject.toml
