[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "curl-cffi>=0.10.0",
    "parsel>=1.10.0",
    "requests>=2.32.3",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
